# auto_doc_ai

./: .gitignore  README.md  dataset_generation.ipynb  empty_title.json  generate_dataset.py  generate_demo.py  main.py  pyproject.toml  stress_test.py  title_transcription_rhode_island.md
dataset_samples/: title_0000_meta.json  title_0001_meta.json  title_0002_meta.json  title_0003_meta.json  title_0004_meta.json
dataset_samples/annotations/: title_0000_back.json  title_0000_front.json  title_0001_back.json  title_0001_front.json  title_0002_back.json  title_0002_front.json  title_0003_back.json  title_0003_front.json  title_0004_back.json  title_0004_front.json
dataset_samples/layoutlm/: title_0000_back.json  title_0000_front.json  title_0001_back.json  title_0001_front.json  title_0002_back.json  title_0002_front.json  title_0003_back.json  title_0003_front.json  title_0004_back.json  title_0004_front.json
docs/: README.md
examples/: README.md
examples/fixtures/: empty_title.json  test_title.json  test_title_long_addr.json  test_title_short_addr.json
guilloche_border/: __init__.py  main.py
notebooks/: README.md  dataset_generation.ipynb  evaluate_real_validation_sample.ipynb
obsolete/guilloche_generation/: cycloidal.py  lissajous.py  main.py  moire.py  spirograph.py
scrape/: scraper.py  vehicle_title_scraper.ipynb
scrape/scripts/: convert_insignias.py  curate.py  download_forms.py  download_forms_pass2.py  download_seals.py  generate_borders.py  normalize_insignias.py
src/data/: static.py
src/document_layout/: __init__.py  cells.py  packing.py  (+1 more)
(+29 files in other folders)
